trunk/tests/jastadd/negative/name_errors/L1/2_TypeCircularity.ob
MODULE TestModule;
	TYPE t = t;
END TestModule.
